@@ -1,53 +1,56 @@
 <?php  if ( ! defined('BASEPATH')) exit('No direct script access allowed');
-/* Translated by xaxxo */
-$lang['list_add'] = 'Добави';
-$lang['list_actions'] = 'Действие';
-$lang['list_page'] = 'Страница';
-$lang['list_paging_of'] = 'от';
-$lang['list_displaying'] = 'Показва {results} продукти от {start} до {end}';
-$lang['list_filtered_from'] = '(филтрирани от общо {total_results} резултати)';
-$lang['list_show_entries'] = 'Покажи {paging} резултати';
-$lang['list_no_items'] = 'Няма записи за показване';
-$lang['list_zero_entries'] = 'Показва 0 до 0 от 0 записи';
-$lang['list_search'] = 'Търси';
-$lang['list_search_all'] = 'Търси всички';
-$lang['list_clear_filtering'] = 'Изчисти филтрирането';
-$lang['list_delete'] = 'Изтрий';
-$lang['list_edit'] = 'Промени';
-$lang['list_paging_first'] = 'Първа';
-$lang['list_paging_previous'] = 'Предишна';
-$lang['list_paging_next'] = 'Следваща';
-$lang['list_paging_last'] = 'Последна';
-$lang['list_loading'] = 'Зареждане...';
-
-$lang['form_edit'] = 'Промени';
-$lang['form_back_to_list'] = 'Обратно към списъка';
-$lang['form_update_changes'] = 'Запази промените';
-$lang['form_cancel'] = 'Откажи';
-$lang['form_update_loading'] = 'Зарежда, запазване на промените...';
-$lang['update_success_message'] = 'Информацията беше успешно запазена.';
-$lang['form_go_back_to_list'] = 'Обратно към списъка';
-
-$lang['form_add'] = 'Добави';
-$lang['insert_success_message'] = 'Информацията беше успешно запазена в базата данни.';
-$lang['form_or'] = 'или';
-$lang['form_save'] = 'Запази';
-$lang['form_insert_loading'] = 'Зарежда, записва информацията...';
-
-$lang['form_upload_a_file'] = 'Качи файл';
-$lang['form_upload_delete'] = 'Изтриване';
-$lang['form_button_clear'] = 'Изчисти';
-
-$lang['delete_success_message'] = 'Информацията беше успешно изтрита от базата данни.';
-$lang['delete_error_message'] = 'Информацията не беше изтрита от базата данни.';
-
-/* Javascript messages */
-$lang['alert_add_form'] = 'Информацията която въведохте може да не е запазена.\\nСигурни ли сте, че искате да се върнете към списъка?';
-$lang['alert_edit_form'] = 'Информацията която въведохте може да не е запазена.\\nСигурни ли сте, че искате да се върнете към списъка?';
-$lang['alert_delete'] = 'Сигурни ли сте че искате да изтриете този запис?';
-
-$lang['insert_error'] = 'Грешка при въвеждането на информацията.';
-$lang['update_error'] = 'Грешка при запазване на информацията.';
-
-/* Added in version 1.2.1 */
-$lang['set_relation_title']		= 'Select {field_display_as}';
+	/* Translated by xaxxo */
+	$lang['list_add'] = 'Добави';
+	$lang['list_actions'] = 'Действие';
+	$lang['list_page'] = 'Страница';
+	$lang['list_paging_of'] = 'от';
+	$lang['list_displaying'] = 'Показва {results} продукти от {start} до {end}';
+	$lang['list_filtered_from'] = '(филтрирани от общо {total_results} резултати)';
+	$lang['list_show_entries'] = 'Покажи {paging} резултати';
+	$lang['list_no_items'] = 'Няма записи за показване';
+	$lang['list_zero_entries'] = 'Показва 0 до 0 от 0 записи';
+	$lang['list_search'] = 'Търси';
+	$lang['list_search_all'] = 'Търси всички';
+	$lang['list_clear_filtering'] = 'Изчисти филтрирането';
+	$lang['list_delete'] = 'Изтрий';
+	$lang['list_edit'] = 'Промени';
+	$lang['list_paging_first'] = 'Първа';
+	$lang['list_paging_previous'] = 'Предишна';
+	$lang['list_paging_next'] = 'Следваща';
+	$lang['list_paging_last'] = 'Последна';
+	$lang['list_loading'] = 'Зареждане...';
+	
+	$lang['form_edit'] = 'Промени';
+	$lang['form_back_to_list'] = 'Обратно към списъка';
+	$lang['form_update_changes'] = 'Запази промените';
+	$lang['form_cancel'] = 'Откажи';
+	$lang['form_update_loading'] = 'Зарежда, запазване на промените...';
+	$lang['update_success_message'] = 'Информацията беше успешно запазена.';
+	$lang['form_go_back_to_list'] = 'Обратно към списъка';
+	
+	$lang['form_add'] = 'Добави';
+	$lang['insert_success_message'] = 'Информацията беше успешно запазена в базата данни.';
+	$lang['form_or'] = 'или';
+	$lang['form_save'] = 'Запази';
+	$lang['form_insert_loading'] = 'Зарежда, записва информацията...';
+	
+	$lang['form_upload_a_file'] = 'Качи файл';
+	$lang['form_upload_delete'] = 'Изтриване';
+	$lang['form_button_clear'] = 'Изчисти';
+	
+	$lang['delete_success_message'] = 'Информацията беше успешно изтрита от базата данни.';
+	$lang['delete_error_message'] = 'Информацията не беше изтрита от базата данни.';
+	
+	/* Javascript messages */
+	$lang['alert_add_form'] = 'Информацията която въведохте може да не е запазена.\\nСигурни ли сте, че искате да се върнете към списъка?';
+	$lang['alert_edit_form'] = 'Информацията която въведохте може да не е запазена.\\nСигурни ли сте, че искате да се върнете към списъка?';
+	$lang['alert_delete'] = 'Сигурни ли сте че искате да изтриете този запис?';
+	
+	$lang['insert_error'] = 'Грешка при въвеждането на информацията.';
+	$lang['update_error'] = 'Грешка при запазване на информацията.';
+	
+	/* Added in version 1.2.1 */
+	$lang['set_relation_title']		= 'Select {field_display_as}';
+	$lang['list_record']			= 'Record';
+	$lang['form_inactive']			= 'inactive';
+	$lang['form_active']			= 'active';
