@@ -50,3 +50,6 @@
 	
 	/* Added in version 1.2.1 */
 	$lang['set_relation_title']		= 'Επιλογή {field_display_as}';	
+	$lang['list_record']			= 'Εγγραφή';
+	$lang['form_inactive']			= 'ανενεργό';
+	$lang['form_active']			= 'ενεργό';
