@@ -51,3 +51,6 @@
 	
 	/* Added in version 1.2.1 */
 	$lang['set_relation_title']		= 'Select {field_display_as}';	
+	$lang['list_record']			= 'Record';
+	$lang['form_inactive']			= 'inactive';
+	$lang['form_active']			= 'active';
