@@ -50,4 +50,7 @@
 	$lang['update_error']			= 'O eroare a avut loc in timpul salvarii datelor.';
 	
 	/* Added in version 1.2.1 */
-	$lang['set_relation_title']		= 'Select {field_display_as}';	
+	$lang['set_relation_title'] 	= 'Selecteaza {field_display_as}'; 
+	$lang['list_record']			= 'Record';
+	$lang['form_inactive']			= 'inactive';
+	$lang['form_active']			= 'active';
